k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: momentum
  labels:
    app.kubernetes.io/name: momentum
    tags.datadoghq.com/env: dev
