k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: momentum
  namespace: momentum
  labels:
    app.kubernetes.io/name: momentum
    tags.datadoghq.com/env: dev
    tags.datadoghq.com/service: momentum
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: momentum
  template:
    metadata:
      labels:
        app.kubernetes.io/name: momentum
        tags.datadoghq.com/env: dev
        tags.datadoghq.com/service: momentum
    spec:
      containers:
        - name: momentum
          image: us-east1-docker.pkg.dev/br-carrefour-devops/br-atc-app/momentum:dev
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3001
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
