k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: momentum
  namespace: momentum
  labels:
    app.kubernetes.io/name: momentum
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: momentum
  ports:
    - name: http
      port: 80
      targetPort: http
