k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: momentum
  namespace: momentum
  labels:
    app.kubernetes.io/name: momentum
    tags.datadoghq.com/env: dev
    tags.datadoghq.com/service: momentum
spec:
  ingressClassName: nginx-internal
  rules:
    - host: momentum.qa.br.wcorp.carrefour.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: momentum
                port:
                  number: 80
